[A5]  + Added al5codec and al5audio add-ons.    al5audio is complete.  + Started ex_haiku example.  + Added the "common" unit for examples.

--- a/BRANCHES/5.0/lib/allegro.cfg
+++ b/BRANCHES/5.0/lib/allegro.cfg
@@ -26,7 +26,7 @@
   {$IFDEF UNIX}
     {$IF DEFINED(DARWIN) OR DEFINED(QNX) OR DEFINED(BEOS)}
 {
-  This version wan't tested on those systems.
+  This version wasn't tested on those systems.
   May be you want to help porting it to other systems and compilers, won't you?
 }
       {$ERROR I didn't test Allegro.pas on your Operating System.  Do you want to help? }
@@ -47,14 +47,19 @@
 CONST
 {$IF DEFINED(UNIX)}
   ALLEGRO_LIB_NAME       = 'liballegro.so.5.0';
+  ALLEGRO_AUDIO_LIB_NAME = 'liballegro_audio.so.5.0';
+  ALLEGRO_CODEC_LIB_NAME = 'liballegro_acodec.so.5.0';
   ALLEGRO_FONT_LIB_NAME  = 'liballegro_font.so.5.0';
   ALLEGRO_IMAGE_LIB_NAME = 'liballegro_image.so.5.0';
   ALLEGRO_MAIN_LIB_NAME  = 'liballegro_main.so.5.0';
 {$ELSEIF DEFINED(WINDOWS)}
 { NOTE: It uses monolith staticly linked version. }
   ALLEGRO_LIB_NAME       = 'allegro-5.0.5-monolith-mt.dll';
+  ALLEGRO_AUDIO_LIB_NAME = 'allegro-5.0.5-monolith-mt.dll';
+  ALLEGRO_CODEC_LIB_NAME = 'allegro-5.0.5-monolith-mt.dll';
   ALLEGRO_FONT_LIB_NAME  = 'allegro-5.0.5-monolith-mt.dll';
   ALLEGRO_IMAGE_LIB_NAME = 'allegro-5.0.5-monolith-mt.dll';
   ALLEGRO_MAIN_LIB_NAME  = 'allegro-5.0.5-monolith-mt.dll';
 { TODO: Use macros to select other posibilities? }
+  {$WARNING "monoligh staticly linked" version only }
 {$ENDIF}
