[A5]  * Add-ons al5codec and al5audio completed (at the moment).  * Few small changes.

--- a/BRANCHES/5.0/lib/allegro.cfg
+++ b/BRANCHES/5.0/lib/allegro.cfg
@@ -6,7 +6,7 @@
 {$IFNDEF FPC}
   {$IFNDEF DELPHI}
 {
-  This version wan't tested with other compilers than Free Pascal.
+  This version wasn't tested with other compilers than Free Pascal and Delphi.
   May be you want to help porting it to other systems and compilers, won't you?
 }
     {$ERROR I didn't test Allegro.pas with this compiler!  Do you want to help? }
@@ -54,12 +54,11 @@ CONST
   ALLEGRO_MAIN_LIB_NAME  = 'liballegro_main.so.5.0';
 {$ELSEIF DEFINED(WINDOWS)}
 { NOTE: It uses monolith staticly linked version. }
+  {$WARNING "monoligh staticly linked" version only }
   ALLEGRO_LIB_NAME       = 'allegro-5.0.5-monolith-mt.dll';
   ALLEGRO_AUDIO_LIB_NAME = 'allegro-5.0.5-monolith-mt.dll';
   ALLEGRO_CODEC_LIB_NAME = 'allegro-5.0.5-monolith-mt.dll';
   ALLEGRO_FONT_LIB_NAME  = 'allegro-5.0.5-monolith-mt.dll';
   ALLEGRO_IMAGE_LIB_NAME = 'allegro-5.0.5-monolith-mt.dll';
   ALLEGRO_MAIN_LIB_NAME  = 'allegro-5.0.5-monolith-mt.dll';
-{ TODO: Use macros to select other posibilities? }
-  {$WARNING "monoligh staticly linked" version only }
 {$ENDIF}
