[A5]  + Added addons "al5primitives" and "al5color".  * Renamed addon "al5codec" to "alacodec".  + Added example "ex_lines".  * Modified the "state" parameter of "al_get_keyboard_state" and "al_key_down" to VAR.

--- a/BRANCHES/5.0/lib/allegro.cfg
+++ b/BRANCHES/5.0/lib/allegro.cfg
@@ -49,16 +49,20 @@ CONST
   ALLEGRO_LIB_NAME       = 'liballegro.so.5.0';
   ALLEGRO_AUDIO_LIB_NAME = 'liballegro_audio.so.5.0';
   ALLEGRO_CODEC_LIB_NAME = 'liballegro_acodec.so.5.0';
+  ALLEGRO_COLOR_LIB_NAME = 'liballegro_color.so.5.0';
   ALLEGRO_FONT_LIB_NAME  = 'liballegro_font.so.5.0';
   ALLEGRO_IMAGE_LIB_NAME = 'liballegro_image.so.5.0';
   ALLEGRO_MAIN_LIB_NAME  = 'liballegro_main.so.5.0';
+  ALLEGRO_PRIMITIVES_LIB_NAME  = 'liballegro_primitives.so.5.0';
 {$ELSEIF DEFINED(WINDOWS)}
 { NOTE: It uses monolith staticly linked version. }
   {$WARNING "monoligh staticly linked" version only }
   ALLEGRO_LIB_NAME       = 'allegro-5.0.5-monolith-mt.dll';
   ALLEGRO_AUDIO_LIB_NAME = 'allegro-5.0.5-monolith-mt.dll';
   ALLEGRO_CODEC_LIB_NAME = 'allegro-5.0.5-monolith-mt.dll';
+  ALLEGRO_COLOR_LIB_NAME = 'allegro-5.0.5-monolith-mt.dll';
   ALLEGRO_FONT_LIB_NAME  = 'allegro-5.0.5-monolith-mt.dll';
   ALLEGRO_IMAGE_LIB_NAME = 'allegro-5.0.5-monolith-mt.dll';
   ALLEGRO_MAIN_LIB_NAME  = 'allegro-5.0.5-monolith-mt.dll';
+  ALLEGRO_PRIMITIVES_LIB_NAME  = 'allegro-5.0.5-monolith-mt.dll';
 {$ENDIF}
