--- a/BRANCHES/5.0/lib/allegro.cfg
+++ b/BRANCHES/5.0/lib/allegro.cfg
@@ -1,7 +1,10 @@
-(* Common compiler configuration.
+(* Common configuration.
 
   This file is included by library units to configure the compiler.  It isn't
   neccessary to include it in your projects. *)
+
+{TODO: Detect MacOS and iOS}
+{TODO: Detect GNU/Pascal}
 
 {$IFNDEF FPC}
   {$IFNDEF DELPHI}
@@ -38,7 +41,6 @@
 { Delphi }
   {$PACKRECORDS C}
   {$LONGSTRINGS ON}
-{TODO: Detect MacOS and iOS}
 {$ENDIF}
 
 
@@ -46,23 +48,23 @@
 { Defines some constants with the names of the library files. }
 CONST
 {$IF DEFINED(UNIX)}
-  ALLEGRO_LIB_NAME       = 'liballegro.so.5.0';
-  ALLEGRO_AUDIO_LIB_NAME = 'liballegro_audio.so.5.0';
-  ALLEGRO_CODEC_LIB_NAME = 'liballegro_acodec.so.5.0';
-  ALLEGRO_COLOR_LIB_NAME = 'liballegro_color.so.5.0';
-  ALLEGRO_FONT_LIB_NAME  = 'liballegro_font.so.5.0';
-  ALLEGRO_IMAGE_LIB_NAME = 'liballegro_image.so.5.0';
-  ALLEGRO_MAIN_LIB_NAME  = 'liballegro_main.so.5.0';
+  ALLEGRO_LIB_NAME             = 'liballegro.so.5.0';
+  ALLEGRO_AUDIO_LIB_NAME       = 'liballegro_audio.so.5.0';
+  ALLEGRO_ACODEC_LIB_NAME      = 'liballegro_acodec.so.5.0';
+  ALLEGRO_COLOR_LIB_NAME       = 'liballegro_color.so.5.0';
+  ALLEGRO_FONT_LIB_NAME        = 'liballegro_font.so.5.0';
+  ALLEGRO_IMAGE_LIB_NAME       = 'liballegro_image.so.5.0';
+  ALLEGRO_MAIN_LIB_NAME        = 'liballegro_main.so.5.0';
   ALLEGRO_PRIMITIVES_LIB_NAME  = 'liballegro_primitives.so.5.0';
 {$ELSEIF DEFINED(WINDOWS)}
-{ NOTE: It uses monolith staticly linked version. }
+{NOTE: It uses monolith staticly linked version. }
   {$WARNING "monoligh staticly linked" version only }
-  ALLEGRO_LIB_NAME       = 'allegro-5.0.5-monolith-mt.dll';
-  ALLEGRO_AUDIO_LIB_NAME = 'allegro-5.0.5-monolith-mt.dll';
-  ALLEGRO_CODEC_LIB_NAME = 'allegro-5.0.5-monolith-mt.dll';
-  ALLEGRO_COLOR_LIB_NAME = 'allegro-5.0.5-monolith-mt.dll';
-  ALLEGRO_FONT_LIB_NAME  = 'allegro-5.0.5-monolith-mt.dll';
-  ALLEGRO_IMAGE_LIB_NAME = 'allegro-5.0.5-monolith-mt.dll';
-  ALLEGRO_MAIN_LIB_NAME  = 'allegro-5.0.5-monolith-mt.dll';
+  ALLEGRO_LIB_NAME             = 'allegro-5.0.5-monolith-mt.dll';
+  ALLEGRO_AUDIO_LIB_NAME       = 'allegro-5.0.5-monolith-mt.dll';
+  ALLEGRO_ACODEC_LIB_NAME      = 'allegro-5.0.5-monolith-mt.dll';
+  ALLEGRO_COLOR_LIB_NAME       = 'allegro-5.0.5-monolith-mt.dll';
+  ALLEGRO_FONT_LIB_NAME        = 'allegro-5.0.5-monolith-mt.dll';
+  ALLEGRO_IMAGE_LIB_NAME       = 'allegro-5.0.5-monolith-mt.dll';
+  ALLEGRO_MAIN_LIB_NAME        = 'allegro-5.0.5-monolith-mt.dll';
   ALLEGRO_PRIMITIVES_LIB_NAME  = 'allegro-5.0.5-monolith-mt.dll';
 {$ENDIF}
