* File "allegro.cfg" splited on "allegro.cfg" and "allegro.inc", more usable.  + Added modifier to set minimun size of enumerations.  It fixes some "Segment    violation" errors and doesn't corrupts the stack too soon.  * Enumerated items uses now ":=" instead of "=" to assign explicit values.    Should be more "stardard".  * Lots of constants changed into enumerations.  * Some "prims" procedures used now a "wrapper" instead of using the library    procedure directly.  Seems as it don't fixed error.  + Added unit "al5ttf" [BROKEN].  * "BOOLEAN" changed to "BYTEBOOL".  Not sure if it fixes any stack corruption.  * "al_get_pixel" declaration fixed.  * A few "transformation" function parameters changed from VAR to OUT.  Don't    know if it's better.  * Fixed line at "ex_haiku".  Still not working properly.  * Fixed color problem in Windows.  MUST document it.

--- a/BRANCHES/5.0/lib/allegro.cfg
+++ b/BRANCHES/5.0/lib/allegro.cfg
@@ -22,8 +22,9 @@
 
 {$IFDEF FPC}
 { Free Pascal. }
-  {$MODE FPC}
+  {$MODE ObjFPC}
   {$PACKRECORDS C}
+  {$PACKENUM 4}
   {$LONGSTRINGS ON}
   { $SMARTLINK ON} { Note that it isn't enabled. }
   {$IFDEF UNIX}
@@ -40,5 +41,6 @@
 {$IFDEF DELPHI}
 { Delphi }
   {$PACKRECORDS C}
+  {$MINENUMSIZE 4}
   {$LONGSTRINGS ON}
 {$ENDIF}
