[A5]   * Compiler configuration improved.

--- a/BRANCHES/5.0/lib/allegro.cfg
+++ b/BRANCHES/5.0/lib/allegro.cfg
@@ -21,12 +21,7 @@
 { Detects and configures the compiler. }
 
 {$IFDEF FPC}
-{ Free Pascal. }
-  {$MODE ObjFPC}
-  {$PACKRECORDS C}
-  {$PACKENUM 4}
-  {$LONGSTRINGS ON}
-  { $SMARTLINK ON} { Note that it isn't enabled. }
+{ Checks platform. }
   {$IFDEF UNIX}
     {$IF DEFINED(DARWIN) OR DEFINED(QNX) OR DEFINED(BEOS)}
 {
@@ -36,11 +31,23 @@
       {$ERROR I didn't test Allegro.pas on your Operating System.  Do you want to help? }
     {$ENDIF}
   {$ENDIF}
+{ Sets dialect. }
+{OBJFPC is needed by OUT parameters (more efficent than VAR ones in some cases)}
+  {$MODE OBJFPC}
+{TODO: Remove this when SHORTSTRING -> PCHAR conversion is fixed using
+ functions instead of wrappers. }
+  {$LONGSTRINGS ON}
+{ Free Pascal. }
+  {$INLINE ON}
+  {$PACKRECORDS C}
+  {$PACKENUM 4}
+  {$IFNDEF DEBUGMODE}
+    {$SMARTLINK ON}
+  {$ENDIF}
 {$ENDIF}
 
 {$IFDEF DELPHI}
 { Delphi }
   {$PACKRECORDS C}
   {$MINENUMSIZE 4}
-  {$LONGSTRINGS ON}
 {$ENDIF}
