--- a/BRANCHES/5.0/lib/allegro.cfg
+++ b/BRANCHES/5.0/lib/allegro.cfg
@@ -32,17 +32,19 @@
     {$ENDIF}
   {$ENDIF}
 { Sets dialect. }
-{OBJFPC is needed by OUT parameters (more efficent than VAR ones in some cases)}
-  {$MODE OBJFPC}
+  {$IF NOT DEFINED(FPC_DELPHI) AND NOT DEFINED(FPC_OBJFPC)}
+  { Needed by OUT parameters (more efficent than VAR ones in some cases). }
+    {$MODE OBJFPC}
+  {$ENDIF}
 {TODO: Remove this when SHORTSTRING -> PCHAR conversion is fixed using
  functions instead of wrappers. }
-  {$LONGSTRINGS ON}
+  { $LONGSTRINGS ON }
 { Free Pascal. }
-  {$INLINE ON}
   {$PACKRECORDS C}
   {$PACKENUM 4}
   {$IFNDEF DEBUGMODE}
     {$SMARTLINK ON}
+    {$INLINE ON}
   {$ENDIF}
 {$ENDIF}
 
