[4.4]  + Now object files are stored in a separated directory.  + Added some custom data types to help interface in 64bit systems.  * Fixed "al_errno" declaration.  * Few documentation fixes.  * Now documentation doesn't creates links automatically.

--- a/TRUNK/docs/makefile
+++ b/TRUNK/docs/makefile
@@ -11,4 +11,4 @@ endif
 all: HTML
 
 HTML:
-	pasdoc -T Allegro.pas -O html --cache-dir cache -E html --auto-abstract --auto-link --introduction intro.txt --conclusion progs.txt $(SOURCES)
+	pasdoc -T Allegro.pas -O html --cache-dir cache -E html --auto-abstract --introduction intro.txt --conclusion progs.txt $(SOURCES)
