[4.4] * Fixed al_install_param_int, al_install_param_int_ex and al_remove_param_int. + Added bitmap clip management functions. + Added al_mouse_on_screen. * Some palette function parameters modified from pointers to VAR. * More changes to make it compatible with 64bit systems.

--- a/TRUNK/makefile
+++ b/TRUNK/makefile
@@ -72,9 +72,9 @@ DEMODIR = demo/
 EXMDIR = examples/
 LIBDIR = lib/
 
-FLAGS = -O3 -Sh -Si -Xs -XX $(EFLAGS)
+#FLAGS = -O3 -Sh -Si -Xs -XX $(EFLAGS)
 # Use next line instead to activate debug.
-#FLAGS = Co -CO -Ct -gl -O- -pg -Sh $(EFLAGS)
+FLAGS = -Co -CO -Ct -gl -O- -pg -Sh -Si $(EFLAGS)
 
 # -- Source files list --
 include makefile.list
