[4.4] * Fixed the "run-time error 202" ("Stack overflow or stack corruption").   There are a conflict between "-Ct" FPC option and Allegro's interruption   routines. Fix was just remove the "-Ct" option from makefile. * Few aestetics and documentation updates.

--- a/TRUNK/makefile
+++ b/TRUNK/makefile
@@ -74,7 +74,7 @@ LIBDIR = lib/
 
 #FLAGS = -O3 -Sh -Si -Xs -XX $(EFLAGS)
 # Use next line instead to activate debug.
-FLAGS = -Co -CO -Ct -gl -O- -pg -Sh -Si $(EFLAGS)
+FLAGS = -Co -CO -gl -O- -Sh -Si $(EFLAGS)
 
 # -- Source files list --
 include makefile.list
