--- a/TRUNK/makefile
+++ b/TRUNK/makefile
@@ -74,7 +74,7 @@ LIBDIR = lib/
 
 #FLAGS = -O3 -Sh -Si -Xs -XX $(EFLAGS)
 # Use next line instead to activate debug.
-FLAGS = -Co -CO -gl -O- -Sh -Si $(EFLAGS)
+FLAGS = -CO -gl -O- -Sh -Si $(EFLAGS)
 
 # -- Source files list --
 include makefile.list
