[4.4] * Fixed Lazarus example.  Still slow, but builds correctly and runs. * Some documentation update. * Changed some GUI colors of demo/mapedit and set F1 shorcut for help. * makefile modified to build optimized executables.

--- a/TRUNK/makefile
+++ b/TRUNK/makefile
@@ -72,9 +72,9 @@ DEMODIR = demo/
 EXMDIR = examples/
 LIBDIR = lib/
 
-#FLAGS = -O3 -Sh -Si -Xs -XX $(EFLAGS)
+FLAGS = -O3 -Sh -Si -Xs -XX $(EFLAGS)
 # Use next line instead to activate debug.
-FLAGS = -CO -gl -O- -Sh -Si $(EFLAGS)
+#FLAGS = -CO -gl -O- -Sh -Si $(EFLAGS)
 
 # -- Source files list --
 include makefile.list
