--- a/TRUNK/examples/lazarus/example.lpi
+++ b/TRUNK/examples/lazarus/example.lpi
@@ -8,7 +8,7 @@
       </Flags>
       <MainUnit Value="0"/>
       <AutoCreateForms Value="False"/>
-      <Title Value="The Allegro's Lazarus example"/>
+      <Title Value="The Allegro.pas' Lazarus example"/>
       <UseXPManifest Value="True"/>
       <ActiveWindowIndexAtStart Value="0"/>
     </General>
@@ -35,13 +35,14 @@
         <PackageName Value="LCL"/>
       </Item1>
     </RequiredPackages>
-    <Units Count="8">
+    <Units Count="10">
       <Unit0>
         <Filename Value="example.lpr"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="example"/>
-        <TopLine Value="23"/>
-        <CursorPos X="34" Y="39"/>
+        <WindowIndex Value="0"/>
+        <TopLine Value="40"/>
+        <CursorPos X="42" Y="52"/>
         <UsageCount Value="26"/>
       </Unit0>
       <Unit1>
@@ -50,12 +51,10 @@
         <ComponentName Value="Form1"/>
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="UnitMainForm"/>
-        <IsVisibleTab Value="True"/>
         <EditorIndex Value="0"/>
         <WindowIndex Value="0"/>
-        <TopLine Value="139"/>
-        <CursorPos X="1" Y="144"/>
-        <FoldState Value=" TKiS01b"/>
+        <TopLine Value="113"/>
+        <CursorPos X="46" Y="47"/>
         <UsageCount Value="26"/>
         <Loaded Value="True"/>
         <LoadedDesigner Value="True"/>
@@ -64,9 +63,10 @@
         <Filename Value="UnitBitmapInterface.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="UnitBitmapInterface"/>
+        <IsVisibleTab Value="True"/>
         <EditorIndex Value="1"/>
         <WindowIndex Value="0"/>
-        <TopLine Value="85"/>
+        <TopLine Value="91"/>
         <CursorPos X="1" Y="114"/>
         <UsageCount Value="26"/>
         <Loaded Value="True"/>
@@ -106,35 +106,51 @@
         <CursorPos X="3" Y="39"/>
         <UsageCount Value="10"/>
       </Unit7>
+      <Unit8>
+        <Filename Value="../../lib/allegro.pas"/>
+        <UnitName Value="allegro"/>
+        <WindowIndex Value="0"/>
+        <TopLine Value="5321"/>
+        <CursorPos X="3" Y="5333"/>
+        <UsageCount Value="10"/>
+      </Unit8>
+      <Unit9>
+        <Filename Value="../../lib/alfixed.pas"/>
+        <UnitName Value="alfixed"/>
+        <WindowIndex Value="0"/>
+        <TopLine Value="205"/>
+        <CursorPos X="29" Y="217"/>
+        <UsageCount Value="10"/>
+      </Unit9>
     </Units>
-    <JumpHistory Count="26" HistoryIndex="25">
+    <JumpHistory Count="22" HistoryIndex="21">
       <Position1>
         <Filename Value="UnitMainForm.pas"/>
-        <Caret Line="134" Column="1" TopLine="117"/>
+        <Caret Line="46" Column="2" TopLine="25"/>
       </Position1>
       <Position2>
         <Filename Value="UnitMainForm.pas"/>
-        <Caret Line="140" Column="1" TopLine="117"/>
+        <Caret Line="81" Column="24" TopLine="61"/>
       </Position2>
       <Position3>
         <Filename Value="UnitMainForm.pas"/>
-        <Caret Line="46" Column="2" TopLine="25"/>
+        <Caret Line="80" Column="24" TopLine="61"/>
       </Position3>
       <Position4>
         <Filename Value="UnitMainForm.pas"/>
-        <Caret Line="45" Column="2" TopLine="25"/>
+        <Caret Line="79" Column="24" TopLine="61"/>
       </Position4>
       <Position5>
         <Filename Value="UnitMainForm.pas"/>
-        <Caret Line="46" Column="2" TopLine="25"/>
+        <Caret Line="78" Column="24" TopLine="61"/>
       </Position5>
       <Position6>
         <Filename Value="UnitMainForm.pas"/>
-        <Caret Line="47" Column="2" TopLine="25"/>
+        <Caret Line="79" Column="24" TopLine="61"/>
       </Position6>
       <Position7>
         <Filename Value="UnitMainForm.pas"/>
-        <Caret Line="46" Column="2" TopLine="25"/>
+        <Caret Line="80" Column="24" TopLine="61"/>
       </Position7>
       <Position8>
         <Filename Value="UnitMainForm.pas"/>
@@ -142,83 +158,71 @@
       </Position8>
       <Position9>
         <Filename Value="UnitMainForm.pas"/>
-        <Caret Line="80" Column="24" TopLine="61"/>
+        <Caret Line="82" Column="24" TopLine="61"/>
       </Position9>
       <Position10>
         <Filename Value="UnitMainForm.pas"/>
-        <Caret Line="79" Column="24" TopLine="61"/>
+        <Caret Line="69" Column="67" TopLine="69"/>
       </Position10>
       <Position11>
         <Filename Value="UnitMainForm.pas"/>
-        <Caret Line="78" Column="24" TopLine="61"/>
+        <Caret Line="70" Column="67" TopLine="69"/>
       </Position11>
       <Position12>
         <Filename Value="UnitMainForm.pas"/>
-        <Caret Line="79" Column="24" TopLine="61"/>
+        <Caret Line="152" Column="46" TopLine="116"/>
       </Position12>
       <Position13>
         <Filename Value="UnitMainForm.pas"/>
-        <Caret Line="80" Column="24" TopLine="61"/>
+        <Caret Line="159" Column="46" TopLine="119"/>
       </Position13>
       <Position14>
         <Filename Value="UnitMainForm.pas"/>
-        <Caret Line="81" Column="24" TopLine="61"/>
+        <Caret Line="184" Column="1" TopLine="157"/>
       </Position14>
       <Position15>
         <Filename Value="UnitMainForm.pas"/>
-        <Caret Line="82" Column="24" TopLine="61"/>
+        <Caret Line="183" Column="1" TopLine="159"/>
       </Position15>
       <Position16>
         <Filename Value="UnitMainForm.pas"/>
-        <Caret Line="69" Column="67" TopLine="69"/>
+        <Caret Line="151" Column="2" TopLine="127"/>
       </Position16>
       <Position17>
         <Filename Value="UnitMainForm.pas"/>
-        <Caret Line="70" Column="67" TopLine="69"/>
+        <Caret Line="139" Column="71" TopLine="129"/>
       </Position17>
       <Position18>
         <Filename Value="UnitMainForm.pas"/>
-        <Caret Line="152" Column="46" TopLine="116"/>
+        <Caret Line="152" Column="18" TopLine="139"/>
       </Position18>
       <Position19>
         <Filename Value="UnitMainForm.pas"/>
-        <Caret Line="159" Column="46" TopLine="119"/>
+        <Caret Line="164" Column="42" TopLine="140"/>
       </Position19>
       <Position20>
         <Filename Value="UnitMainForm.pas"/>
-        <Caret Line="184" Column="1" TopLine="157"/>
+        <Caret Line="163" Column="42" TopLine="139"/>
       </Position20>
       <Position21>
         <Filename Value="UnitMainForm.pas"/>
-        <Caret Line="183" Column="1" TopLine="159"/>
+        <Caret Line="144" Column="1" TopLine="139"/>
       </Position21>
       <Position22>
         <Filename Value="UnitMainForm.pas"/>
-        <Caret Line="151" Column="2" TopLine="127"/>
+        <Caret Line="78" Column="5" TopLine="66"/>
       </Position22>
-      <Position23>
-        <Filename Value="UnitMainForm.pas"/>
-        <Caret Line="139" Column="71" TopLine="129"/>
-      </Position23>
-      <Position24>
-        <Filename Value="UnitMainForm.pas"/>
-        <Caret Line="152" Column="18" TopLine="139"/>
-      </Position24>
-      <Position25>
-        <Filename Value="UnitMainForm.pas"/>
-        <Caret Line="164" Column="42" TopLine="140"/>
-      </Position25>
-      <Position26>
-        <Filename Value="UnitMainForm.pas"/>
-        <Caret Line="163" Column="42" TopLine="139"/>
-      </Position26>
     </JumpHistory>
   </ProjectOptions>
   <CompilerOptions>
     <Version Value="9"/>
+    <Target>
+      <Filename Value="./example"/>
+    </Target>
     <SearchPaths>
       <IncludeFiles Value="$(ProjOutDir)"/>
       <OtherUnitFiles Value="../../lib"/>
+      <UnitOutputDirectory Value="../../obj"/>
     </SearchPaths>
     <Parsing>
       <SyntaxOptions>
@@ -227,19 +231,19 @@
       </SyntaxOptions>
     </Parsing>
     <CodeGeneration>
+      <SmartLinkUnit Value="True"/>
       <Checks>
         <IOChecks Value="True"/>
         <OverflowChecks Value="True"/>
-        <StackChecks Value="True"/>
       </Checks>
       <Optimizations>
-        <OptimizationLevel Value="0"/>
+        <VariablesInRegisters Value="True"/>
+        <OptimizationLevel Value="2"/>
       </Optimizations>
     </CodeGeneration>
     <Linking>
       <Debugging>
         <GenerateDebugInfo Value="True"/>
-        <GenGProfCode Value="True"/>
       </Debugging>
       <Options>
         <Win32>
@@ -248,6 +252,9 @@
       </Options>
     </Linking>
     <Other>
+      <CompilerMessages>
+        <UseMsgFile Value="True"/>
+      </CompilerMessages>
       <CompilerPath Value="$(CompPath)"/>
     </Other>
   </CompilerOptions>
