[5.0]   Merging old repository (#241) with new one (#221).  Don't remember everything   a too lazy to get it from repository itself.
+ Added unit al5base, that defines library names and data types for correct
  32/64bit support.  So, a lot of changes to use it.
- Removed unit al5data as it's not used anymore.
- Removed file alllegro.inc as it's not used anymore.
* Updated build scripts.
* Lots of updated documentation.

--- a/BRANCHES/5.0/lib/allegro.cfg
+++ b/BRANCHES/5.0/lib/allegro.cfg
@@ -4,6 +4,7 @@
   neccessary to include it in your projects. *)
 
 {TODO: Detect MacOS and iOS}
+{TODO: Detect Android?}
 {TODO: Detect GNU/Pascal}
 
 {$IFNDEF FPC}
@@ -12,7 +13,7 @@
   This version wasn't tested with other compilers than Free Pascal and Delphi.
   May be you want to help porting it to other systems and compilers, won't you?
 }
-    {$ERROR I didn't test Allegro.pas with this compiler!  Do you want to help? }
+    {$ERROR Allegro.pas wasn't tested with this compiler.  Do you want to help? }
   {$ENDIF}
 {$ENDIF}
 
@@ -28,7 +29,7 @@
   This version wasn't tested on those systems.
   May be you want to help porting it to other systems and compilers, won't you?
 }
-      {$ERROR I didn't test Allegro.pas on your Operating System.  Do you want to help? }
+      {$ERROR Allegro.pas wasn't tested on your Operating System.  Do you want to help? }
     {$ENDIF}
   {$ENDIF}
 { Sets dialect. }
@@ -36,9 +37,7 @@
   { Needed by OUT parameters (more efficent than VAR ones in some cases). }
     {$MODE OBJFPC}
   {$ENDIF}
-{TODO: Remove this when SHORTSTRING -> PCHAR conversion is fixed using
- functions instead of wrappers. }
-  { $LONGSTRINGS ON }
+  {$LONGSTRINGS ON }
 { Free Pascal. }
   {$PACKRECORDS C}
   {$PACKENUM 4}
