[5.0]   * Lots of changes on examples.  I've removed the "InitProgram" because isn't     so common.

--- a/BRANCHES/5.0/makefile.all
+++ b/BRANCHES/5.0/makefile.all
@@ -11,7 +11,7 @@ examples: $(EXMFILES)
 	@echo "Finished all examples."
 
 # Executables
-$(EXMDIR)%$(BINSUF): $(EXMDIR)%.pas $(LIBFILES)
+$(EXMDIR)%$(BINSUF): $(EXMDIR)%.pas $(EXMDIR)common.pas $(LIBFILES)
 	fpc $(FLAGS) $(EFLAGS) -Fu$(LIBDIR) -FU$(OBJDIR) $< -o$@
 	@echo Example $@ ready!
 
