[4.4]   * Directory "docs/" refactorized.  Also, documentation is builded from     main makefile.   * Now, AL_U_* mnemonics are constants.   * Some documentation changes, to avoid warnings.

--- a/TRUNK/makefile
+++ b/TRUNK/makefile
@@ -71,6 +71,7 @@ OBJDIR = obj/
 DEMODIR = demo/
 EXMDIR = examples/
 LIBDIR = lib/
+DOCDIR = docs/lib/
 
 #FLAGS = -O3 -Sh -Si -Xs -XX $(EFLAGS)
 # Use next line instead to activate debug.
