[4.4]   + Added {$MODE OBJFPC} to configuration file, so now it is possible to use     "OUT" parameters and avoid some "Variable X doesn't seems to be     initialized" hint messages.   * A lot of procedures of unit al3D changed their "POINTER" parameters to     "VAR" and "OUT" parameters.  This way there's no need to use the "@"     operator.  Also, some procedures doesn't need a wrapper, so they were     removed.   * al_apply_matrix_f is now INLINE.   * Fixed name of program exRotScl.   * TODO file ordered, adding stuff from SF's tickets.   * Some documentation updates.   * Make file changed.  Now it shows hints when compiling debug version.

--- a/TRUNK/lib/allegro.cfg
+++ b/TRUNK/lib/allegro.cfg
@@ -13,7 +13,10 @@
 
 {$IFDEF FPC}
 { Free Pascal. }
+{ Next is set to allow the use of OUT parameters and avoid "Variable X does
+  not seem to be initialized" hint message. }
+ {$MODE OBJFPC}
+{ Next are set for compatability with C language. }
  {$PACKRECORDS C}
  {$LONGSTRINGS ON}
- {$SMARTLINK ON}
 {$ENDIF}
