--- a/TRUNK/makefile.all
+++ b/TRUNK/makefile.all
@@ -1,9 +1,9 @@
 # Makefile generic - build rules
 
-.PHONY: all docs
+.PHONY: all examples demogames demoalex demozombie docs
 
 # Main objective: the whole project
-all: adbanner examples demo
+all: adbanner examples demogames
 	@echo "Finished $(PROJECT)"
 	@echo "To create the documentation, run 'make docs'."
 
@@ -12,7 +12,11 @@ examples: $(EXMFILES)
 	@echo "Finished all examples"
 
 # Demo games.
-demo: $(ALEXDEMO)
+demogames: $(ALEXDEMO) $(ZOMBDEMO)
+
+demoalex: $(ALEXDEMO)
+
+demozombie: $(ZOMBDEMO)
 
 # Library documentation.
 docs:
@@ -25,7 +29,12 @@ $(EXMBIN)%$(BINSUF): $(EXMDIR)%.pp $(LIBFILES)
 
 $(ALEXBIN)%$(BINSUF): $(ALEXSRC) $(LIBFILES)
 	fpc $(FLAGS) -Fu$(LIBDIR) -FE$(ALEXBIN) -FU$(OBJDIR) $< -o$@
-	@echo Demo game ready!
+	@echo Alex demo game ready!
+
+
+$(ZOMBBIN)%$(BINSUF): $(ZOMBSRC) $(LIBFILES)
+	fpc $(FLAGS) -Fu$(LIBDIR) -FE$(ZOMBBIN) -FU$(OBJDIR) $< -o$@
+	@echo Zombie 3D demo game ready!
 
 # Returns some variables.
 status: adbanner
@@ -38,11 +47,13 @@ status: adbanner
 	@echo "  Units : $(LIBFILES)"
 	@echo "  Examples : $(EXMFILES)"
 	@echo "  Alex demo game : $(ALEXDEMO)"
+	@echo "  Zombie 3D demo game : $(ZOMBDEMO)"
 
 # Cleans everything.
 veryclean: clean
 	$(DELETE) $(EXMFILES)
-	$(DELETE) $(DEMO)
+	$(DELETE) $(ALEXDEMO)
+	$(DELETE) $(ZOMBDEMO)
 
 # Clean temporary files.
 clean:
@@ -58,7 +69,9 @@ help: adbanner
 	@echo "--------"
 	@echo "make all            } Builds the whole project."
 	@echo "make examples       } Builds the examples only."
-	@echo "make demo           } Builds the demo game."
+	@echo "make demogames      } Builds both demonstration games."
+	@echo "make demoalex       } Builds Alex the Allegrator demonstration game only."
+	@echo "make demozombie     } Builds Zombie 3D demonstration game only."
 	@echo "make docs           } Builds the internal documentation."
 	@echo "make clean          } Deletes temporary files."
 	@echo "make veryclean      } Deletes all builded files."
