--- a/TRUNK/makefile.list
+++ b/TRUNK/makefile.list
@@ -29,3 +29,14 @@ $(error ERROR: No source code found at $(ALEXDIR))
 endif
 ALEXSRC = $(ALEXDIR)%.pp $(TEM3)
 ALEXDEMO = $(addprefix $(ALEXBIN),$(addsuffix $(BINSUF), $(basename $(notdir $(TEM4) ) ) ) )
+
+TEM5 = $(wildcard $(ZOMBDIR)*.pas)
+ifeq ($(strip $(TEM5)),)
+$(error ERROR: No source code found at $(ZOMBDIR))
+endif
+TEM6 = $(wildcard $(ZOMBDIR)*.pp)
+ifeq ($(strip $(TEM6)),)
+$(error ERROR: No source code found at $(ZOMBDIR))
+endif
+ZOMBSRC = $(ZOMBDIR)%.pp $(TEM5)
+ZOMBDEMO = $(addprefix $(ZOMBBIN),$(addsuffix $(BINSUF), $(basename $(notdir $(TEM6) ) ) ) )
