[4.4]   + Added al_fixpi (fixed point PI number).  Just for fun.   * al_get_desktop_resolution uses OUT parameters now.  exCamera example:   * TVector is an OBJECT now.   * TCamera doesn't use matrix pointers anymore.   - Removed TChessBoard object.  It is a simple procedure now.  Zombie3D Demo:   + Added a TCamera3D to the Scene (and TScene3D).   + Added TCustomObject3D, and TSprite3D inherits from it.   + Started a MapMaker application, much like good old 3D Construction Kit.     Of course, it doesn't work yet.

--- a/TRUNK/makefile
+++ b/TRUNK/makefile
@@ -79,6 +79,8 @@ ALEXDIR = demos/alex/
 ALEXBIN = $(BINDIR)demoalex/
 
 ZOMBDIR = demos/zombie3d/
+ZOMBENG = $(ZOMBDIR)engine/
+ZOMBMAP = $(ZOMBDIR)mapmaker/
 ZOMBBIN = $(BINDIR)demozombie3d/
 
 #FLAGS = -O3 -Sh -Si -Xs -XX $(EFLAGS)
