[4.4]  - Removed the "demozombie3d" demo project.  Unfortunatelly I have no much time    due to real-life(tm) stuff (personal and professional).  May be when I work    on branch 5.0 I can do something.  * Small fix on excamera code.  Actually doesn't changes but makes things more    readable.

--- a/TRUNK/makefile
+++ b/TRUNK/makefile
@@ -75,13 +75,8 @@ DOCDIR = docs/lib/
 
 EXMBIN = $(BINDIR)$(EXMDIR)
 
-ALEXDIR = demos/alex/
-ALEXBIN = $(BINDIR)demoalex/
-
-ZOMBDIR = demos/zombie3d/
-ZOMBENG = $(ZOMBDIR)engine/
-ZOMBMAP = $(ZOMBDIR)mapmaker/
-ZOMBBIN = $(BINDIR)demozombie3d/
+ALEXDIR = demo/
+ALEXBIN = $(BINDIR)demo/
 
 #FLAGS = -O3 -Sh -Si -Xs -XX $(EFLAGS)
 # Use next line instead to activate debug.
