[4.4]  * Now, TVector object from "cube.pas" is an OBJECT instead of a CLASS.    This actually simplifies code a bit.  + Added procedures al_textprintf_ex, al_textprintf_centre_ex and    al_textprintf_right_ex.  * Fixed a silly bug at alUNIX.  * Some minor changes about coding style, and use of RESULT on functions.  * Documentation update and fixing.

--- a/TRUNK/makefile
+++ b/TRUNK/makefile
@@ -78,9 +78,9 @@ EXMBIN = $(BINDIR)$(EXMDIR)
 ALEXDIR = demo/
 ALEXBIN = $(BINDIR)demo/
 
-#FLAGS = -O3 -Sh -Si -Xs -XX $(EFLAGS)
+FLAGS = -O3 -Sh -Si -Xs -XX $(EFLAGS)
 # Use next line instead to activate debug.
-FLAGS = -gl -O1 -Sh -Si -vh -vw $(EFLAGS)
+#FLAGS = -gl -O1 -Sh -Si -vh -vw $(EFLAGS)
 
 # -- Source files list --
 include makefile.list
