[4.4]   Preparing the release of version 4.4.5.
  * Documentation update.
  * Few changes in demonstration game.

--- a/TRUNK/makefile
+++ b/TRUNK/makefile
@@ -87,7 +87,7 @@ OBJDIR = obj/
 EXMDIR = examples/
 LIBDIR = lib/
 BINDIR = bin/
-DOCDIR = docs/lib/
+DOCDIR = docs/
 
 EXMBIN = $(BINDIR)$(EXMDIR)
 
