[TRUNK]  - _A5_LIB_VER_ removed from library name construction.  * A lot of documentation formatting changes, as well as few fixes and updates.

--- a/TRUNK/lib/allegro5.cfg
+++ b/TRUNK/lib/allegro5.cfg
@@ -5,7 +5,7 @@
 
 {TODO: Detect MacOS and iOS}
 {TODO: Detect Android?}
-{TODO: Detect GNU/Pascal}
+{TODO: Detect GNU/Pascal?}
 
 {$IFNDEF FPC}
   {$IFNDEF DELPHI}
@@ -22,6 +22,7 @@
 { Detects and configures the compiler. }
 
 {$IFDEF FPC}
+{ Free Pascal. }
 { Checks platform. }
   {$IFDEF UNIX}
     {$IF DEFINED(DARWIN) OR DEFINED(QNX) OR DEFINED(BEOS)}
@@ -38,7 +39,6 @@
     {$MODE OBJFPC}
   {$ENDIF}
   {$LONGSTRINGS ON }
-{ Free Pascal. }
   {$PACKRECORDS C}
   {$PACKENUM 4}
   {$IFNDEF DEBUGMODE}
@@ -56,4 +56,4 @@
 { Delphi 7 }
   {$MINENUMSIZE 4}
 {$ENDIF}
-
+{TODO: More Delphi versions? }
