[TRUNK]  > Moving forward to new Allegro 5.2.0.    I'm moving code inside unit Allegro5.pas to be ordered as    Allegro headers, that should make more easy to search for    mistakes.  + Added a few pixel-information functions.  * Changes and completion on documentation.

--- a/TRUNK/makefile
+++ b/TRUNK/makefile
@@ -14,7 +14,7 @@ SHELL = /bin/sh
 
 # ===============================================
 # Project name
-PROJECT = Allegro.pas 5 alpha
+PROJECT = Allegro.pas 5.2 alpha-2
 
 # ===============================================
 
