[TRUNK]  * Compilation mode changed to "Delphi".  This should help with compatiability.  * ex_font example is now like the one included with Allegro.  * A few documentation update.

--- a/TRUNK/lib/allegro5.cfg
+++ b/TRUNK/lib/allegro5.cfg
@@ -34,9 +34,8 @@
     {$ENDIF}
   {$ENDIF}
 { Sets dialect. }
-  {$IF NOT DEFINED(FPC_DELPHI) AND NOT DEFINED(FPC_OBJFPC)}
-  { Needed by OUT parameters (more efficent than VAR ones in some cases). }
-    {$MODE OBJFPC}
+  {$IF NOT DEFINED(FPC_DELPHI)}
+    {$MODE DELPHI}
   {$ENDIF}
   {$LONGSTRINGS ON }
   {$PACKRECORDS C}
