[TRUNK]  * Now al_get_bitmap_format returns ALLEGRO_PIXEL_FORMAT instead    of AL_INT.  + Added memory management routines.  + Added examples: ex_clipboard and ex_draw.  * Documentation update, including the addition of stuff to test    fpdoc.  I'm not sure if I like it, as I'm having problems    with the "lazde" tool.

--- a/TRUNK/makefile
+++ b/TRUNK/makefile
@@ -100,6 +100,7 @@ EXMDIR = examples/
 OBJDIR = obj/
 BINDIR = bin/
 DOCDIR = docs/lib/
+DOCSRC = docs/src/
 
 EXMBIN = $(BINDIR)$(EXMDIR)
 
@@ -109,6 +110,16 @@ EXMBIN = $(BINDIR)$(EXMDIR)
 # FLAGS = $(OPTOPT) -Sh -Si $(EFLAGS)
 # Use next line instead to activate debug.
 FLAGS = $(DBGOPT) -Sh -Si $(EFLAGS)
+
+
+
+# ---------------------------
+# -- Documentation options --
+# ---------------------------
+
+MKSOPT = --package=Allegro.pas --disable-errors --disable-private --disable-seealso
+FPDOPT = --warn-no-node
+
 
 # -- Source files list --
 include makefile.list
