--- a/TRUNK/makefile.all
+++ b/TRUNK/makefile.all
@@ -1,11 +1,11 @@
 # Makefile generic - build rules
 
-.PHONY: all docs
+.PHONY: all docs makeskel
 
 # Main objective: the whole project
 all: adbanner examples
-	@echo "Finished $(PROJECT)"
-	@echo "To create the documentation, run 'make' from the docs directory"
+	@echo "Finished $(PROJECT)."
+	@echo "To create the documentation, run 'make docs'."
 
 examples: $(EXMFILES)
 	@echo "Finished all examples."
@@ -18,6 +18,23 @@ $(EXMBIN)%$(BINSUF): $(EXMDIR)%.pas $(EXMDIR)common.pas $(LIBFILES)
 # Documentation.
 docs:
 	pasdoc -T "$(PROJECT)" -O html --cache-dir $(OBJDIR) -E $(DOCDIR) --auto-abstract $(LIBFILES)
+#	fpdoc $(FPDOPT) --package=Allegro_pas --project=$(DOCSRC)project.xml --format=html --output=$(DOCDIR)
+
+## This generates skeleton for documentation.
+## Skeleton files are written in root.  Actual documentation sources are read
+## from 'docs/src/'.
+makeskel:
+	makeskel $(MKSOPT) --input=$(LIBDIR)allegro5.pas --output=allegro5.xml
+	makeskel $(MKSOPT) --input=$(LIBDIR)al5base.pas --output=al5base.xml
+	makeskel $(MKSOPT) --input=$(LIBDIR)al5acodec.pas --output=al5acodec.xml
+	makeskel $(MKSOPT) --input=$(LIBDIR)al5audio.pas --output=al5audio.xml
+	makeskel $(MKSOPT) --input=$(LIBDIR)al5color.pas --output=al5color.xml
+	makeskel $(MKSOPT) --input=$(LIBDIR)al5font.pas --output=al5font.xml
+	makeskel $(MKSOPT) --input=$(LIBDIR)al5gl.pas --output=al5gl.xml
+	makeskel $(MKSOPT) --input=$(LIBDIR)al5image.pas --output=al5image.xml
+	makeskel $(MKSOPT) --input=$(LIBDIR)al5nativedlg.pas --output=al5nativedlg.xml
+	makeskel $(MKSOPT) --input=$(LIBDIR)al5primitives.pas --output=al5primitives.xml
+	makeskel $(MKSOPT) --input=$(LIBDIR)al5ttf.pas --output=al5ttf.xml
 
 # Returns some variables.
 status: adbanner
