--- a/TRUNK/makefile.all
+++ b/TRUNK/makefile.all
@@ -17,7 +17,7 @@ $(EXMBIN)%$(BINSUF): $(EXMDIR)%.pas $(EXMDIR)common.pas $(LIBFILES)
 
 # Documentation.
 docs:
-	pasdoc -T "$(PROJECT)" -O html --cache-dir $(OBJDIR) -E $(DOCDIR) --auto-abstract $(LIBFILES)
+	pasdoc -T "$(PROJECT)" -O html --cache-dir $(OBJDIR) -E $(DOCDIR) --auto-abstract --use-tipue-search $(LIBFILES)
 #	fpdoc $(FPDOPT) --package=Allegro_pas --project=$(DOCSRC)project.xml --format=html --output=$(DOCDIR)
 
 ## This generates skeleton for documentation.
